--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
 <div class="container">
+  <h1 id="header">phone addiction</h1>
+  <p id="desc">this dear data project shows giorgia lupi's phone usage for one week.<br>
+    each mark below represents one instance of usage, grouped by the place or situation the usage occured.</p>
+  <p class="info">
+    <span id="group">place/situation</span> //
+    <span id="interaction">interaction type</span> //
+    <span id="extras">additional information</span>
+  </p>
     <section class="canvas" id="canvas">
     </section>
     <div class="custom-tooltip">
