changed file references

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title></title>
-    <link href="../bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="./style.css" rel="stylesheet"/>
+    <link href="./bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
 <div class="container">
@@ -22,8 +22,8 @@
     </div>
 </div>
 
-<script src="./d3.js"></script>
-<script src="./script.js"></script>
+<script src="d3.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
