--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
   <h1 id="header">phone addiction</h1>
-  <p id="desc">this dear data project shows giorgia lupi's phone usage for one week.<br>
+  <p id="desc">this dear data project shows giorgia lupi's phone usage for one week.
     each mark below represents one instance of usage, grouped by the place or situation where the usage occured.</p>
   <section class="canvas" id="canvas">
   </section>
