fixed type error

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="container">
   <h1 id="header">phone addiction</h1>
   <p id="desc">this dear data project shows giorgia lupi's phone usage for one week.
-    each mark below represents one instance of usage, grouped by the place or situation where the usage occured.</p>
+    each mark below represents one instance of usage, grouped by the place or situation where the usage occurred.</p>
   <section class="canvas" id="canvas">
   </section>
     <div class="key">
